[package]
name = "bevy-ast-3d"
version = "0.1.0"
edition = "2021"
description = "3D AST visualizer with evaluation-order layout, built with Bevy + WebGL2"

[dependencies]
bevy = { version = "0.14", features = ["webgl2"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
